--- a/ext/jack/Makefile.am
+++ b/ext/jack/Makefile.am
@@ -5,7 +5,7 @@ plugin_LTLIBRARIES = libgstjack.la
 libgstjack_la_SOURCES = gstjack.c
 libgstjack_la_CFLAGS = $(GST_CFLAGS) $(JACK_CFLAGS)
 libgstjack_la_LIBADD = $(GST_LIBS) $(JACK_LIBS)
-libgstjack_la_LDFLAGS = @GST_PLUGIN_LDFLAGS@
+libgstjack_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
 noinst_HEADERS = gstjack.h
 
