removal of //-style comments don't link plugins to core libs -- the versioning is done internally to the plugins with...
Original commit message from CVS:
* removal of //-style comments
* don't link plugins to core libs -- the versioning is done internally to the plugins with the plugin_info struct,
and symbol resolution is lazy, so we can always know if a plugin can be loaded by the plugin_info data. in theory.

--- a/ext/jack/Makefile.am
+++ b/ext/jack/Makefile.am
@@ -4,7 +4,7 @@ plugin_LTLIBRARIES = libgstjack.la
 
 libgstjack_la_SOURCES = gstjack.c
 libgstjack_la_CFLAGS = $(GST_CFLAGS) $(JACK_CFLAGS)
-libgstjack_la_LIBADD = $(GST_LIBS) $(JACK_LIBS)
+libgstjack_la_LIBADD = $(JACK_LIBS)
 libgstjack_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
 noinst_HEADERS = gstjack.h
