testsuite/event.py (EventFileSrcTest.setUp): Start the pipeline, so we don't get warnings when sending events
Original commit message from CVS:
* testsuite/event.py (EventFileSrcTest.setUp): Start the pipeline,
so we don't get warnings when sending events
(EventTest.setUp): Ditto.

* testsuite/pad.py: New test, only testing simple pad queries so far.

* testsuite/Makefile.am (tests): Add missing tests

* gst/gst.override (_wrap_gst_pad_query): Raise RuntimeError if
the return value is False and only return the queried value.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1,9 +1,12 @@
 tests =  \
-	caps.py \
+	buffer.py \
+        caps.py \
 	common.py \
 	element.py \
-	interface.py \
-	pipeline.py
+	event.py \
+        interface.py \
+	pad.py \
+        pipeline.py
 
 check-local:
 	@PYTHONPATH=$(top_builddir):$(top_builddir)/gst/.libs $(PYTHON) $(srcdir)/runtests.py
