testsuite/struct.py (StructureTest.testStructureChange): Enable some tests.
Original commit message from CVS:
* testsuite/struct.py (StructureTest.testStructureChange): Enable
some tests.

* gst/gst.override (_wrap_gst_structure_ass_subscript): Impl

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -9,7 +9,7 @@ tests =  \
         pipeline.py
 
 check-local:
-	@PYTHONPATH=$(top_builddir):$(top_builddir)/gst/.libs $(PYTHON) $(srcdir)/runtests.py
+	@PYTHONPATH=$(PYTHONPATH):$(top_builddir):$(top_builddir)/gst/.libs $(PYTHON) $(srcdir)/runtests.py
 	@rm -fr *.pyc
 
 EXTRA_DIST = $(tests) runtests.py
