more build fixes
Original commit message from CVS:
more build fixes

--- a/examples/gst/Makefile.am
+++ b/examples/gst/Makefile.am
@@ -1,4 +1,5 @@
-EXTRA_DIST = \
+examplesdir = $(pkgdatadir)/examples
+examples_DATA = 	\
 	bps.py		\
 	cp.py		\
 	f2f.py		\
@@ -6,3 +7,5 @@ EXTRA_DIST = \
 	gst123		\
 	play.py		\
 	vorbisplay.py
+
+EXTRA_DIST = $(examples)
