--- a/Makefile.am
+++ b/Makefile.am
@@ -14,29 +14,6 @@ EXTRA_DIST = \
 	gst-python.spec.in \
 	gst-python.spec \
 	README-docs \
-	RELEASE \
-	examples/gst/bps.py \
-	examples/gst/cp.py \
-	examples/gst/dvdplay.py \
-	examples/gst/f2f.py \
-	examples/gst/identity.py \
-	examples/gst/ilat.py \
-	examples/gst/lat.py \
-	examples/gst/rot13.py \
-	examples/gst/vorbisplay.py \
-	examples/gst/wavenc.py \
-	examples/gstplay/player.py \
-        codegen/__init__.py \
-        codegen/argtypes.py \
-        codegen/codegen.py \
-        codegen/definitions.py \
-        codegen/defsparser.py \
-        codegen/docextract.py \
-        codegen/docgen.py \
-        codegen/h2def.py \
-        codegen/mergedefs.py \
-        codegen/mkskel.py \
-        codegen/override.py \
-        codegen/scmexpr.py
+	RELEASE
 
 include $(top_srcdir)/common/release.mak
