--- a/configure.ac
+++ b/configure.ac
@@ -163,6 +163,9 @@ changequote([,])dnl
 
 AC_OUTPUT([
   Makefile
+  examples/Makefile
+  examples/gst/Makefile
+  examples/gstplay/Makefile
   gst/Makefile
   pkgconfig/Makefile
   pkgconfig/gst-python.pc
