Add examples/gstplay/ here
Original commit message from CVS:
Add examples/gstplay/ here

--- a/configure.ac
+++ b/configure.ac
@@ -165,6 +165,7 @@ AC_OUTPUT([
   Makefile
   examples/Makefile
   examples/gst/Makefile
+  examples/gstplay/Makefile
   gst/Makefile
   pkgconfig/Makefile
   pkgconfig/gst-python.pc
