pkgconfig/gst-python-uninstalled.pc.in: set pyexecdir for uninstalled as well
Original commit message from CVS:
* pkgconfig/gst-python-uninstalled.pc.in:
set pyexecdir for uninstalled as well

--- a/pkgconfig/gst-python-uninstalled.pc.in
+++ b/pkgconfig/gst-python-uninstalled.pc.in
@@ -3,6 +3,7 @@
 #exec_prefix=
 #includedir=${pcfiledir}/..
 #datadir=${pcfiledir}/..
+pyexecdir=${pcfiledir}/..
 
 # you can use the --variable=pygtkincludedir argument to
 # pkg-config to get this value.  You might want to use this to
