--- a/tests/check/Makefile.am
+++ b/tests/check/Makefile.am
@@ -1,4 +1,6 @@
-TESTS = gst / gstobject check_PROGRAMS = $ (TESTS)
+TESTS = gst/gstobject
 
-    AM_CFLAGS = $ (GST_OBJ_CFLAGS) $ (CHECK_CFLAGS)
-    LDADD = $ (GST_OBJ_LIBS) $ (CHECK_LIBS)
+check_PROGRAMS = $(TESTS)
+
+AM_CFLAGS = $(GST_OBJ_CFLAGS) $(CHECK_CFLAGS)
+LDADD = $(GST_OBJ_LIBS) $(CHECK_LIBS)
