--- a/tests/check/Makefile.am
+++ b/tests/check/Makefile.am
@@ -1,6 +1,12 @@
-TESTS = gst/gstobject
+TESTS = gst/gstobject gst-libs/gdp
 
 check_PROGRAMS = $(TESTS)
 
 AM_CFLAGS = $(GST_OBJ_CFLAGS) $(CHECK_CFLAGS)
 LDADD = $(GST_OBJ_LIBS) $(CHECK_LIBS)
+
+gst_libs_gdp_SOURCES = \
+	gst-libs/gdp.c \
+	$(top_srcdir)/libs/gst/dataprotocol/dataprotocol.c
+# remove GST_ENABLE_NEW when dataprotocol has been declared API-stable
+gst_libs_gdp_CFLAGS = $(AM_CFLAGS) -DGST_ENABLE_NEW
