move common code to a lib
Original commit message from CVS:
move common code to a lib

--- a/check/Makefile.am
+++ b/check/Makefile.am
@@ -2,8 +2,14 @@ TESTS = gst/gstobject gst-libs/gdp
 
 check_PROGRAMS = $(TESTS)
 
+noinst_LTLIBRARIES = libgstcheck.la
+
+libgstcheck_la_SOURCES = gstcheck.c
+libgstcheck_la_LIBADD = $(GST_OBJ_LIBS)
+noinst_HEADERS = gstcheck.h
+
 AM_CFLAGS = $(GST_OBJ_CFLAGS) $(CHECK_CFLAGS)
-LDADD = $(GST_OBJ_LIBS) $(CHECK_LIBS)
+LDADD = $(GST_OBJ_LIBS) $(CHECK_LIBS) libgstcheck.la
 
 gst_libs_gdp_SOURCES = \
 	gst-libs/gdp.c \
