Split out gst.override to a few more files.
Original commit message from CVS:
Split out gst.override to a few more files.
Rename gstpad-handlers.override to gstpad.override
Include more information for some LinkError exceptions

--- a/gst/Makefile.am
+++ b/gst/Makefile.am
@@ -37,10 +37,15 @@ _gst_la_LIBADD = $(common_libadd)
 _gst_la_LDFLAGS = $(common_ldflags) -export-symbols-regex init_gst
 _gst_la_SOURCES = gst-argtypes.c gstmodule.c 
 nodist__gst_la_SOURCES = gst.c
-GST_OVERRIDES = gst.override \
-		gstbin.override \
-		gstbuffer.override \
-                gstpad-handlers.override
+GST_OVERRIDES = 		\
+	gst.override 		\
+	gstbin.override 	\
+	gstbuffer.override 	\
+	gstcaps.override 	\
+	gstelement.override 	\
+	gstpad.override		\
+	gststructure.override
+
 GST_DEFS = gst.defs gst-types.defs
 CLEANFILES = gst.c
 EXTRA_DIST += $(GST_DEFS) $(GST_OVERRIDES)
