--- a/testsuite/clock/Makefile.am
+++ b/testsuite/clock/Makefile.am
@@ -1,5 +1,5 @@
 include ../Rules
 
-tests_pass = signedness clock1 clock2
+tests_pass = signedness clock1 clock2 clock3
 tests_fail =
 tests_ignore =
