ext/dvdread/stream_labels.c: new file
Original commit message from CVS:
* ext/dvdread/stream_labels.c: new file
* ext/dvdread/stream_labels.h: new file
* ext/dvdread/Makefile.am:
* ext/dvdread/dvdreadsrc.c: (_seek_title):
Extract audio stream label from DVD IFO files.
It only dump them on the console for now, still have to
make playbin aware of them.

--- a/ext/dvdread/Makefile.am
+++ b/ext/dvdread/Makefile.am
@@ -4,12 +4,12 @@ plugin_LTLIBRARIES = libgstdvdreadsrc.la
 ## FIXME: the extra option, what do we do with it ?
 ## AM_CFLAGS = -D_LARGEFILE64_SOURCE $(LIBDVDREADCFLAGS)
 
-libgstdvdreadsrc_la_SOURCES = dvdreadsrc.c
+libgstdvdreadsrc_la_SOURCES = dvdreadsrc.c stream_labels.c
 libgstdvdreadsrc_la_CFLAGS = $(GST_CFLAGS)
 libgstdvdreadsrc_la_LIBADD = $(DVDREAD_LIBS)
 libgstdvdreadsrc_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
-noinst_HEADERS = dvdreadsrc.h
+noinst_HEADERS = dvdreadsrc.h stream_labels.h
 
 EXTRA_DIST = \
 	README \
