More state change fixes.
Original commit message from CVS:
More state change fixes.
Added/fixed some testcases.
Threadsafety fixes.

--- a/tests/old/testsuite/states/Makefile.am
+++ b/tests/old/testsuite/states/Makefile.am
@@ -1,5 +1,5 @@
 include ../Rules
 
-tests_pass = locked parent
+tests_pass = test1 test2 test3 test4 locked parent
 tests_fail = 
-tests_ignore = bin
+tests_ignore = 
