first commit in the branch to test
Original commit message from CVS:
first commit in the branch to test

--- a/tools/gst-launch.1.in
+++ b/tools/gst-launch.1.in
@@ -23,7 +23,7 @@ For a complete description of possible PIPELINE-DESCRIPTIONS see above under
 .B  \-\-help
 Print help synopsis and available FLAGS
 .TP 8
-.B  \-v, \-\-verbose
+.B  \-v, \-\-silent
 Output status information
 .TP 8
 .B  \-XTYPE, \-\-exclude=TYPE, 
