--- a/configure.ac
+++ b/configure.ac
@@ -661,6 +661,7 @@ include/Makefile
 gst/Makefile
 gst/gstconfig.h
 gst/gstversion.h
+gst/base/Makefile
 gst/indexers/Makefile
 gst/elements/Makefile
 gst/parse/Makefile
