check/Makefile.am (TESTS): Add pipelines/simple_launch_lines.
Original commit message from CVS:
2005-02-23  Andy Wingo  <wingo@pobox.com>

* check/Makefile.am (TESTS): Add pipelines/simple_launch_lines.

* check/pipelines/simple_launch_lines.c: New test suite for simple
gst-launch lines. Just a beginning right now.

--- a/check/Makefile.am
+++ b/check/Makefile.am
@@ -27,7 +27,8 @@ TESTS = \
 	gst/gstdata	\
 	gst/gstobject	\
 	gst/gstpad	\
-	gst-libs/gdp
+	gst-libs/gdp	\
+	pipelines/simple_launch_lines
 
 check_PROGRAMS = $(TESTS)
 
