tests/complexity.c: Adjust to lack of gst_bin_iterate, boolean link return values.
Original commit message from CVS:
2005-03-01  Andy Wingo  <wingo@pobox.com>

* tests/complexity.c: Adjust to lack of gst_bin_iterate, boolean
link return values.

* gst/elements/gsttee.c, gst/elements/gsttee.h: I am the master of
do-nothing plugins! Fear the dev-zero!

* gst/elements/gstelements.c
* gst/elements/Makefile.am: Add tee back to gstelements.

* gst/gstutils.h
* gst/gstutils.c (gst_pad_proxy_getcaps, gst_pad_proxy_setcaps):
Resurrect from the dead. Use gst_iterator_fold to be threadsafe.

* gst/gstiterator.h (GstIteratorFoldFunction): Return a bool.

* gst/gstiterator.c (gst_iterator_fold): Only continue folding as
long as the fold function returns TRUE. Add a bunch o docs.
(gst_iterator_foreach): Add docs about when the iterator will be
freed.
(gst_iterator_find_custom): Make more efficient because of the
bool-return-value thing.

* check/gst/gstiterator.c (add_fold_func): Adapt to new
fold-funcs-returning-bool policy.

* gst/gstutils.h:
* gst/gstutils.c (gst_element_link, gst_element_link_many)
(gst_element_link_filtered, gst_element_link_pads)
(gst_element_link_pads_filtered): It seems Wim changed the return
type to booleans internally. Assume he knows what he's doing and
change the prototypes as well.

--- a/gst/elements/Makefile.am
+++ b/gst/elements/Makefile.am
@@ -29,19 +29,19 @@ libgstelements_la_SOURCES =	\
 	gstfilesrc.c		\
 	gstidentity.c		\
 	gstelements.c		\
-	#gstaggregator.c		\
-	gstbufferstore.c	\
-	gstfakesink.c		\
-	gstfilesink.c		\
-	gstfdsink.c		\
-	gstfdsrc.c		\
-	gstmd5sink.c		\
-	$(multifilesrc)		\
-	$(pipefilter)		\
-	gstshaper.c		\
-	gststatistics.c		\
-	gsttee.c		\
-	gsttypefindelement.c
+	gsttee.c
+
+# 	gstaggregator.c		\
+# 	gstbufferstore.c	\
+# 	gstfilesink.c		\
+# 	gstfdsink.c		\
+# 	gstfdsrc.c		\
+# 	gstmd5sink.c		\
+# 	$(multifilesrc)		\
+# 	$(pipefilter)		\
+# 	gstshaper.c		\
+# 	gststatistics.c		\
+# 	gsttypefindelement.c
 
 libgstelements_la_CFLAGS = $(GST_OBJ_CFLAGS)
 libgstelements_la_LIBADD = $(GST_OBJ_LIBS)
