Fix libxml-less compilation (--disable-loadsave).
Original commit message from CVS:
* configure.ac:
* gst/gstconfig.h.in:
* gst/indexers/gstindexers.c: (plugin_init):
* gst/registries/gstxmlregistry.h:
Fix libxml-less compilation (--disable-loadsave).

--- a/gst/gstconfig.h.in
+++ b/gst/gstconfig.h.in
@@ -61,10 +61,11 @@
 
 /***** Deal with XML stuff, we have to handle both loadsave and registry *****/
 
-#if (! (defined(GST_DISABLE_LOADSAVE) && defined(GST_DISABLE_REGISTRY)) )
+#if (! defined(GST_DISABLE_LOADSAVE) )
 # include <libxml/parser.h>
 #else
-# define GST_DISABLE_LOADSAVE_REGISTRY
+/* misnomer but we cannot rename symbols */
+# define GST_DISABLE_LOADSAVE_REGISTRY 
 #endif
 
 #ifdef WIN32
