docs/gst/Makefile.am: Fix buildbot.
Original commit message from CVS:
* docs/gst/Makefile.am:
Fix buildbot.

--- a/docs/gst/Makefile.am
+++ b/docs/gst/Makefile.am
@@ -83,6 +83,7 @@ IGNORE_HFILES= \
 	gstfilesink.h \
 	gstfilesrc.h \
 	gstidentity.h \
+	gstlibxmlregistry.h \
 	gstmd5sink.h \
 	gstmultifilesrc.h \
 	gstmultifdsink.h \
