Call gst-inspect-$VERSION instead of gst-inspect. Fixes #168659.
Original commit message from CVS:
* Makefile.am:
* configure.ac:
* gst-element-check.m4:
* gst-element-check.m4.in:
Call gst-inspect-$VERSION instead of gst-inspect. Fixes #168659.

--- a/Makefile.am
+++ b/Makefile.am
@@ -52,7 +52,8 @@ win32 = $(shell cat $(top_srcdir)/win32/MANIFEST)
 debug:
 	echo $(win32)
 EXTRA_DIST = \
-	gstreamer.spec gstreamer.spec.in gst-element-check.m4 \
+	gstreamer.spec gstreamer.spec.in \
+	gst-element-check.m4 gst-element-check.m4.in \
 	configure.ac autogen.sh depcomp \
 	REQUIREMENTS ABOUT-NLS DOCBUILDING DEVEL RELEASE \
 	$(win32) \
