--- a/gst-element-check.m4.in
+++ b/gst-element-check.m4.in
@@ -7,7 +7,7 @@ dnl AM_GST_ELEMENT_CHECK(ELEMENT-NAME, ACTION-IF-FOUND, ACTION-IF-NOT-FOUND)
 AC_DEFUN([AM_GST_ELEMENT_CHECK],
 [
   if test "x$GST_INSPECT" == "x"; then
-    AC_CHECK_PROG(GST_INSPECT, gst-inspect, gst-inspect, [])
+    AC_CHECK_PROG(GST_INSPECT, gst-inspect-@GST_MAJORMINOR@, gst-inspect-@GST_MAJORMINOR@, [])
   fi
 
   if test "x$GST_INSPECT" != "x"; then
