--- a/tools/gst-register.1.in
+++ b/tools/gst-register.1.in
@@ -16,6 +16,8 @@ need to load plugins until they need them.
 .TP 8
 .B  \-\-help
 Print help synopsis and available FLAGS
+
+.SH "GSTREAMER OPTIONS"
 .TP 8
 .B  \-\-gst\-info\-mask=FLAGS
 \fIGStreamer\fP info flags to set (list with \-\-help)
@@ -32,9 +34,22 @@ Enable printout of errors while loading \fIGStreamer\fP plugins
 .TP 8
 .B  \-\-gst\-plugin\-path=PATH
 Add directories separated with ':' to the plugin search path
+.TP 8
+.B  \-\-gst\-scheduler=SCHEDULER
+Use SCHEDULER as the default scheduler
+.TP 8
+.B  \-\-gst\-registry=REGISTRY
+Use the file REGISTRY as registry instead of the default
+
+.SH FILES
+.TP 8
+@prefix@/var/cache/gstreamer/registry.xml
+the xml plugin database
+
 .SH SEE ALSO
 .BR gst\-inspect (1),
 .BR gst\-launch (1),
 .BR gst\-compprep (1)
+
 .SH AUTHOR
 The GStreamer team at http://gstreamer.net/
