--- a/tools/gst-launch.1.in
+++ b/tools/gst-launch.1.in
@@ -35,9 +35,12 @@ Save XML representation of pipeline to FILE and exit
 .B  \-f, \-\-no_fault
 Do not install a fault handler
 .TP 8
-.B  \-t, \-\-trace
+.B  \-T, \-\-trace
 Print memory allocation traces. The feature must be enabled at compile time to
 work.
+.TP 8
+.B  \-t, \-\-tags
+Print tags found in the streams, if any.
 .TP 8
 .B  \-i, \-\-iterations=N
 Stop processing after N iterations.
