gst/__init__.py (Value, Fourcc, IntRange, DoubleRange)
Original commit message from CVS:
2005-04-14  Andy Wingo  <wingo@pobox.com>

* gst/__init__.py (Value, Fourcc, IntRange, DoubleRange)
(Fraction): New classes.

* gst/gst.override (_wrap_gst_tag_list_get)
(_wrap_gst_tag_list_get_value_index)
(tag_foreach_func_dict)
(_wrap_gst_tag_list_subscript): Use gstvalue procs.
(init): Initialize the pygstvalue stuff (which involves accessing
definitions from gst/__init__.py).

* gst/gststructure.override (_wrap_gst_structure_ass_subscript):
Just use the pygstvalue functions to do conversion. As it is right
now, it's an incompatible change with the previous behavior,
because it doesn't try to parse field values like "(fourcc)XVID".
We can restore that previous behaviour if there is a need for it.
(_wrap_gst_structure_subscript): Use gstvalue functions to do the
conversion.

* gst/Makefile.am: Add in pygstvalue.[ch].

* gst/pygstvalue.h:
* gst/pygstvalue.c: New files.
(pygst_value_as_pyobject): Wraps pyg_value_as_pyobject, handling
gstvalues as well.
(pygst_value_init_for_pyobject): Sniffs a pyobject for a type and
initializes a GValue appropriately.
(pygst_value_from_pyobject): Wraps pyg_value_from_pyobject,
handling gvalues as well.

* testsuite/test_struct.py (StructureTest.testStructureChange)
(StructureTest.testGstValue): Add some tests for GstValue wrapping.

--- a/gst/Makefile.am
+++ b/gst/Makefile.am
@@ -25,7 +25,7 @@ endif
 defs_DATA = gst-types.defs
 defsdir = $(pkgdatadir)/2.0/defs
 
-noinst_HEADERS = common.h
+noinst_HEADERS = common.h pygstvalue.h
 
 INCLUDES = $(PYTHON_INCLUDES)
 EXTRA_DIST = $(defs_DATA) common.h arg-types.py ltihooks.py
@@ -35,7 +35,7 @@ PYGTK_DEFSDIR = @PYGTK_DEFSDIR@
 _gst_la_CFLAGS = $(common_cflags)
 _gst_la_LIBADD = $(common_libadd)
 _gst_la_LDFLAGS = $(common_ldflags) -export-symbols-regex init_gst
-_gst_la_SOURCES = gst-argtypes.c gstmodule.c 
+_gst_la_SOURCES = gst-argtypes.c gstmodule.c pygstvalue.c
 nodist__gst_la_SOURCES = gst.c
 GST_OVERRIDES = 		\
 	gst.override 		\
